# kyusa

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  bors.toml  build.rs  config.json  database.sql  rustfmt.toml  sqlx-data.json
.github/workflows/: lint.yml  rust.yml
migrations/: 2020-07-08_02-58-33_init.sql
src/: main.rs
src/cf_file_purge/: mod.rs  models.rs
src/cfg/: mod.rs
src/dbu/: mod.rs
src/routes/: delete.rs  looking.rs  mod.rs  serve.rs  stats.rs  upload.rs  users.rs
src/utils/: cf.rs  config.rs  cron.rs  database.rs  db.rs  mod.rs  models.rs
