[package]
name = "kyusa"
version = "0.4.0"
authors = ["Tyler Hill <tyhi@tyhi.rs"]
edition = "2018"
repository = "https://github.com/tyhi/kyusa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-multipart = "0.3.0"
actix-web = "3.3.2"
futures = "0.3.15"
mimalloc = { version = "0.1.25", default-features = false }
serde = "1.0.126"
tokio = { version = "1.6.0", features = ["fs", "macros"] }
short_url = "0.1.0"
blake3 = "0.3.8"
once_cell = "1.7.2"
fastrand = "1.4.1"
sled = "0.34.6"
bincode = "1.3.3"
mime = "0.3.16"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
