[package]
name = "kyusa"
version = "0.5.0"
authors = ["Tyler Hill <tyhi@tyhi.rs"]
edition = "2018"
repository = "https://github.com/tyhi/kyusa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0-beta.6"
actix-multipart = "0.4.0-beta.5"
actix-web = "4.0.0-beta.8"
futures = "0.3.15"
mimalloc = { version = "0.1.26", default-features = false }
serde = "1.0.126"
tokio = { version = "1.8.1", features = ["io-util", "macros", "fs", "rt"] }
short_url = "0.1.0"
blake3 = "0.3.8"
once_cell = "1.8.0"
sled = "0.34.6"
rkyv = "0.7.2"
mime = "0.3.16"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
